bugfix:userscalable bugfix on iphone

--- a/src/assets/styles/main.less
+++ b/src/assets/styles/main.less
@@ -13,11 +13,17 @@
 
 
 html {
-  width:100wv;
+  width: 100vw !important;
 }
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
+body {
+  touch-action: none;
+}
+
 @primary: #ec5a1b;
 @primary-invert: #fff;
 @body-color: #333;
